Switching to an equivalent init call to libKTorrent to prevent future API breakage.

CCMAIL: christoph@maxiom.de
BUG: 312538
FIXED-IN: 4.10

svn path=/branches/KDE/4.10/kdenetwork/kget/; revision=1330900