transfer-plugins/bittorrent/bttransfer.cpp
@@ -408,7 +408,7 @@ void BTTransfer::btTransferInit(const KUrl &src, const QByteArray &data)
 
     QFile file(m_source.toLocalFile());
 
-    if (!file.exists()) {
+    if (!file.open(QIODevice::ReadOnly)) {
         setError(i18n("Torrent file does not exist"), SmallIcon("dialog-cancel"), Job::NotSolveable);
         setTransferChange(Tc_Status, true);
         return;
@@ -452,7 +452,7 @@ void BTTransfer::btTransferInit(const KUrl &src, const QByteArray &data)
         m_ready = true;
 
         kDebug() << "Source:" << m_source.path() << "Destination:" << m_dest.path();
-        torrent->init(0, m_source.toLocalFile(), m_tmp + m_source.fileName().remove(".torrent"), KUrl(m_dest.directory()).toLocalFile());
+        torrent->init(0, file.readAll(), m_tmp + m_source.fileName().remove(".torrent"), KUrl(m_dest.directory()).toLocalFile());
 
         m_dest = torrent->getStats().output_path;
         if (!torrent->getStats().multi_file_torrent && (m_dest.fileName() != torrent->getStats().torrent_name))//TODO check if this is needed, so if that case is true at some point
